[gd_scene load_steps=5 format=3 uid="uid://dvnbwjdh3h32x"]

[ext_resource type="Script" uid="uid://2e4jyj74mqpw" path="res://Scripts/spotlight.gd" id="1_dlmpy"]
[ext_resource type="Texture2D" uid="uid://bos3lmbp61ijh" path="res://Sprites/Misc/Iluminação/luz 02.png" id="2_4soar"]
[ext_resource type="Texture2D" uid="uid://d0m4eejiygtf1" path="res://Textures/light.tres" id="2_nkc8l"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xps18"]
polygon = PackedVector2Array(-6, 8, 0, -1, 6, 8, 3, -8, -3, -8)

[node name="SpotLight" type="Node2D" node_paths=PackedStringArray("lights")]
script = ExtResource("1_dlmpy")
lights = [NodePath("PointLight2D")]

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.972549, 0.635294, 1)
shadow_enabled = true
texture = ExtResource("2_nkc8l")
texture_scale = 5.18

[node name="LightDetectArea" type="Area2D" parent="PointLight2D"]
collision_layer = 32
collision_mask = 18

[node name="LightDetectCollision" type="CollisionPolygon2D" parent="PointLight2D/LightDetectArea"]
polygon = PackedVector2Array(0, 0, -208, 272, 208, 272)

[node name="LightOccluder2D" type="LightOccluder2D" parent="PointLight2D"]
occluder = SubResource("OccluderPolygon2D_xps18")

[node name="LightPositionMarker" type="Marker2D" parent="PointLight2D"]
position = Vector2(0, 2)

[node name="Luz02" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(-1, 1)
texture = ExtResource("2_4soar")

[connection signal="area_entered" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_area_entered"]
[connection signal="area_exited" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_area_exited"]
[connection signal="body_entered" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_body_entered"]
[connection signal="body_exited" from="PointLight2D/LightDetectArea" to="." method="_on_light_detect_area_body_exited"]
